[package]
name = "ironpipe-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
ironpipe = { path = "../.." }
rebar = { git = "https://github.com/alexandernicholson/rebar.git" }
rebar-cluster = { git = "https://github.com/alexandernicholson/rebar.git" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmpv = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
image = "0.25"
